# openmath

./: .gitignore  CMakeLists.txt  READ.ME  README.md
doc/: READ.ME  (+1 more)
src/: Binary.cpp  Binary_Arithmetic_Divide_Opt.cpp  Binary_Arithmetic_Divide_Remainder_Opt.cpp  Binary_Arithmetic_Multiply_Opt.cpp  Binary_Arithmetic_Remainder_Opt.cpp  Binary_Arithmetic_Sum_Opt.cpp  Binary_Convert.cpp  Binary_Ptr_Impl.cpp  Bitwise.cpp  CMakeLists.txt  CompResult.cpp  UnLimitedIntClassHelper.cpp  UnLimitedInt_Cont.cpp  UnLimitedInt_Method.cpp  UnLimitedInt_Operator_Bit.cpp  UnLimitedInt_Operator_Comp.cpp  UnLimitedInt_Operator_Four_Arithmetic.cpp  UnLimitedInt_Static_Method.cpp  main.cpp
src/fixedbytelengthint/: FixedByteLengthInt_Arithmetic_Opt.cpp  FixedByteLengthInt_Bit_Opt.cpp  FixedByteLengthInt_Bit_Shift_Opt.cpp  FixedByteLengthInt_Comp_Opt.cpp  FixedByteLengthInt_Ctor.cpp  FixedByteLengthInt_Method.cpp  FixedByteLengthInt_Special_Memeber_And_Dtor.cpp
src/fixedbytelengthintbuffer/: FixedByteLengthIntBuffer_Arithmetic_Opt.cpp  FixedByteLengthIntBuffer_Bit_Opt.cpp  FixedByteLengthIntBuffer_Bit_Shift_Opt.cpp  FixedByteLengthIntBuffer_Ctor.cpp  FixedByteLengthIntBuffer_Method.cpp  FixedByteLengthIntBuffer_Special_Memeber_And_Dtor.cpp
src/unlimitedint/: UnLimitedInt_Arithmetic_Opt.cpp  UnLimitedInt_Bit_Opt.cpp  UnLimitedInt_Bit_Shift_Opt.cpp  UnLimitedInt_Comp_Opt.cpp  UnLimitedInt_Ctor.cpp  UnLimitedInt_Method.cpp  UnLimitedInt_Output_Stream.cpp  UnLimitedInt_Special_Member_And_Dtor.cpp
src/unlimitedintbuffer/: UnLimitedIntBuffer_Arithmetic_Opt.cpp  UnLimitedIntBuffer_Bit_Opt.cpp  (+4 more)
(+94 files in other folders)
